--- a/sandbox/deploy.yaml
+++ b/sandbox/deploy.yaml
@@ -1,31 +1,31 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: guestbook-ui
+  name: guestbook-ui-viv
 spec:
   replicas: 1
   revisionHistoryLimit: 3
   selector:
     matchLabels:
-      app: guestbook-ui
+      app: guestbook-ui-viv
   template:
     metadata:
       labels:
-        app: guestbook-ui
+        app: guestbook-ui-viv
     spec:
       containers:
       - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
-        name: guestbook-ui
+        name: guestbook-ui-viv
         ports:
         - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: guestbook-ui
+  name: guestbook-ui-viv
 spec:
   ports:
   - port: 80
     targetPort: 80
   selector:
-    app: guestbook-ui        
+    app: guestbook-ui-viv        
