--- a/sandbox/deploy.yaml
+++ b/sandbox/deploy.yaml
@@ -18,6 +18,8 @@ spec:
         name: guestbook-ui-viv
         ports:
         - containerPort: 80
+      imagePullSecrets:
+        - name: regcred  
 ---
 apiVersion: v1
 kind: Service
